--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/Geschoss/hr-simple-hospital-node#readme",
   "devDependencies": {
     "@types/pg": "^8.6.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "pg": "^8.7.3",
-    "typescript": "^4.6.2"
+    "ws": "^8.5.0"
   }
 }
