--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
+    "build": "npm i",
     "start": "node ./application/main.js",
     "test": "npm test",
     "format": "prettier --write ."
@@ -23,11 +24,11 @@
   "homepage": "https://github.com/Geschoss/hr-simple-hospital-node#readme",
   "devDependencies": {
     "@types/pg": "^8.6.5",
-    "prettier": "^2.5.1",
-    "typescript": "^4.6.2"
+    "prettier": "^2.5.1"
   },
   "dependencies": {
     "pg": "^8.7.3",
+    "typescript": "^4.6.2",
     "ws": "^8.5.0"
   }
 }
